# webchaussette

./: .gitignore  Cargo.toml  README.md
src/: http_types.rs  lib.rs  websocket_types.rs
src/frame/: frame_types.rs  mod.rs
src/handshake/: create_message.rs  mod.rs  parse_message.rs  parse_request.rs
src/server/: event_handler.rs  message_type.rs  mod.rs  public_handler.rs  server.rs
src/utils/: build_http.rs  generate_key.rs  mod.rs  unmask_payload.rs
