[package]
name = "webchaussette"
version = "1.3.1"
authors = ["Santha Veroni <zoubheir@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Fast, powerful, and easy-to-set-up WebSocket library"


[dependencies]
httparse = "1.8"
rand = "0.8"
base64 = "0.22"
bytes = "1.6"
sha1 = "0.10"
hex = "0.4"
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
